* Add claim on event log - view event log on claim

Version 1.8 - 2016-07-06
* Rework module. Merge with benefit module

Version 1.6 - 2015-12-23
* Print actions are available on claim

Version 1.4 - 2015-05-29

Version 1.3 - 2015-01-22

Version 1.2 - 2014-07-01
* Changelog file creation