@@ -1,3 +1,4 @@
+* Add option to automatically deliver benefits
 * Add claim on event log - view event log on claim
 
 Version 1.8 - 2016-07-06
